# aoa-stackoverflow-connector

./: .env.example  AGENTS.md  BOUNDARIES.md  CHANGELOG.md  CHARTER.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: validate.yml
connector/: README.md  SOURCE_POLICY.md  STORAGE_POLICY.md
connector/manifests/: connector_manifest.yaml  route_allowlist.yaml
connector/profiles/: python-datetime-timezone.yaml
connector/schemas/: claim.schema.json  crawl_receipt.schema.json  evidence_packet.schema.json  graph_edge.schema.json  graph_node.schema.json  index_manifest.schema.json  materialize_receipt.schema.json  normalized_answer.schema.json  normalized_comment.schema.json  normalized_item.schema.json  normalized_question.schema.json  normalized_topic.schema.json
connector/seeds/: python_datetime_timezone_questions.yaml
docs/: AGENT_INSTALL_ROUTE.md  ARCHITECTURE.md  CONNECTOR_FAMILY_CLAIM_CONTRACT.md  CROSS_CONNECTOR_GENERALIZATION_REPORT.md  GRAPH_MODEL.md  INSTALL.md  MCP_ROLLOUT.md  QUERY_MODEL.md  RUNTIME_CONTRACT.md  STARTER_PROOF.md
docs/decisions/: AOA-STACKOVERFLOW-D-0001-third-source-connector-proof.md  README.md
evals/: AGENTS.md  PORT.yaml
evals/suites/: README.md  connector-family-claim-runtime.suite.md  starter_claim_answer_packets.json  starter_claim_conflict_relations.json
kag/: AGENTS.md  README.md  manifest.json
kag/edges/: source_routes_to_storage_boundary.json
kag/indexes/: index_family.manifest.json  (+8 more)
scripts/: validate_connector.py  validate_local_stats_port.py
stats/: AGENTS.md  README.md  port.manifest.json
(+67 files in other folders)
